--- a/wp-content/themes/beetube/responsive.css
+++ b/wp-content/themes/beetube/responsive.css
@@ -47,12 +47,32 @@ background-position:right center;
 /*== Tablet Portrait
  *==================================================================*/
 @media only screen and (min-width:640px) and (max-width:959px) {
+/*== Boxed=============================================*/ 
+.boxed-wrap #page{
+}
+.boxed-wrap #page #content{
+	margin:0 !important;
+	width:100% !important;
+}
+.boxed-wrap #page #main .wrap #content .grid-small .item{
+	width:270px !important;
+	margin-left:45px !important;
+} 
+.boxed-wrap #page #sidebar{
+	width:100%;
+	float:left !important;
+	}
+.boxed-wrap #page #main .wrap #content .grid-mini .item{	
+	width:175px !important;
+	margin-left:34px !important;
+}	
+/*== End Boxed=============================================*/ 
 .hori-like{
 display:none;
 }
 /*== Structure */
 body{min-width:640px;}
-.boxed-wrap #page{width:640px;}
+.boxed-wrap #page{width:640px; padding:0;}
 #main{padding:20px 0;}
 .wrap{width:620px}
 #content, #sidebar{width:100%;}
@@ -102,7 +122,7 @@ border-right:1px solid #272727;
 .home-featured .nav .carousel-next{right:0;width:308px;}
 
 .home-featured-full .stage, 
-.home-featured-full .stage .carousel{width:620px;height:349px;overflow:hidden;}
+.home-featured-full .stage .carousel{width:620px;height:100%;overflow:hidden;padding-left: 5px;}
 .home-featured-full .stage,
 .home-featured-full .stage .carousel-list{height: 349px;}
 .home-featured-full .stage .item,
@@ -111,6 +131,13 @@ width: 620px;
 height: 349px;
 }
 .home-featured-full .stage .thumb img{width:620px;}
+ /*== New Video Thumbnail */ 
+.list-large .thumb{
+  width:100%;
+  }
+ .home-featured .fluid-width-video-wrapper iframe, .home-featured .fluid-width-video-wrapper object, .home-featured .fluid-width-video-wrapper embed, .home-featured .fluid-width-video-wrapper video{width:620px !important;}
+ .home-featured .stage, .home-featured .stage .item, .home-featured .stage .thumb{width:620px !important;}
+/*== End New Video Thumbnail */ 
 
 
 .fcarousel-5 .carousel-clip{width:544px;}
@@ -122,7 +149,22 @@ margin: 5px 3px 20px 3px;
 		margin-left: 0px;
 		}
 
-
+.single-post #content{
+width: 620px;
+}
+.single-post .fluid-width-video-wrapper .thumb{
+width: 620px;
+}
+#social-share {
+	margin-top: 11px;
+}
+.grid-small .item{
+	margin: 0 0 20px 45px !important;
+}
+.grid-mini .item{
+	margin: 0 0 20px 34px !important;
+    width: 175px !important;
+}
 /*== Footbar
  *=================================*/
 #footbar .widget-col-5{width:100%;margin-left:0;}
@@ -130,14 +172,57 @@ margin: 5px 3px 20px 3px;
 
 /* Fixed Youtube Video with JWPlayer*/
 .fluid-width-video-wrapper embed{height:349px !important;}
-
+.dashboard-container,.rightbar,.leftbar,.user-container{
+	width:100%;
+}
+.user-container .login-container{
+	float:none;
+	margin-bottom:20px !important;
+	margin-left: auto !important;
+    margin-right: auto !important;
+}
+.profilebtn,.newpostbtn {
+	float:left;
+	margin-left:10px;
+}
+.info-box{
+	width:90%
+}
+.single-banner{width:100%; margin-left:0px;} 
+.single-banner>a>img{width:100% !important;}
 /* End @media 
  *================================================================== */}
 
 /*== Mobile
  *==================================================================*/ 
 @media only screen and (max-width:639px) {
-
+/*== Boxed=============================================*/ 
+.boxed-wrap #page{
+	min-width: 300px !important;
+	max-width: 620px !important;
+	padding:0 !important;
+}
+.boxed-wrap #page #content{
+	margin:0 !important;
+	width:100% !important;
+}
+.boxed-wrap #page #main .wrap #content .grid-small .item{
+	width:140px !important;
+	margin-left:20px !important;
+}
+.boxed-wrap #page #main .wrap #content .list-medium .item{
+  	margin:0;
+  }
+.boxed-wrap #page #main .wrap #content .grid-medium .item{
+  	margin-left:10px;
+  }
+.boxed-wrap #page #main .wrap #content .list-large .item{
+  	margin:0;
+  }
+.boxed-wrap #page #main .wrap #content .list-small .entry-title{
+  	height:auto;
+  }   
+/*== End Boxed=============================================*/ 
 #main-nav .menu{display:none;}
 #main-nav .select-div{display:block;}
  
@@ -167,13 +252,13 @@ body{min-width:320px;}
 #branding{float:none;margin-bottom:10px;}
 #site-logo img{margin:0 auto;}
 #header-actions{float:none;}
-#header-search{float:right;width:85%;margin:0;padding:15px 0 0;overflow:hidden;}
+#header-search{float:right;width:100%;margin:0;padding:15px 0 0;overflow:hidden;}
 
 .nav-toggle{overflow:hidden;
 background-image: url(images/menu-mobile.png);
 background-repeat:no-repeat;
 background-position:bottom;
-padding:21px 10px;
+padding:5px 10px;
 }
 #top-nav{
 padding-bottom:10px;
@@ -193,7 +278,7 @@ padding:10px 0;
 
 .grid-small .item {
 	width:140px;
-	margin: 0 10px 20px;
+	margin: 0 0px 20px 20px;
 }
 .grid-small .thumb {
 	width:140px;
@@ -202,6 +287,7 @@ padding:10px 0;
 .grid-small .thumb img {
 	width:140px;
 }
+.grid-small .nag{margin-left:-20px !important;}
 
 .grid-medium .nag{margin: 0 -10px;}
 .grid-medium .item{width:300px;margin: 0 10px 20px;}
@@ -267,10 +353,8 @@ background:none;width:130px
     border: none;
 
     }
- .single-banner, .single-post #content .entry-meta .author, .single-post #content .entry-meta .time  {
- display:none
- 
- } 
+.single-banner{width:100%; margin-left:0px;} 
+.single-banner>a>img{width:100% !important;}
 
 .single-post #content {
 	width:100%
@@ -280,18 +364,41 @@ background:none;width:130px
 margin-bottom:0px;
 }
 .single-post .fluid-width-video-wrapper {
-    padding-top: 84.25%;
+   height: 200px;
 }
+
 #commentform input[type="submit"]{
 padding: 15px 95px;
 }
+.single-post .section-box.related-posts{
+	padding-top:25px !important;
+}
+.single-post .fluid-width-video-wrapper .thumb{
+    height: 220px;
+    width: 320px;
+}
+.fluid-width-video-wrapper, .single-post .full-width-video-layout .fluid-width-video-wrapper{
+	height: 220px;
+}
+.full-single-ad{
+	margin:30px auto;
+}
+.single-post .fluid-width-video-wrapper .mejs-container, .single-post .fluid-width-video-wrapper .mejs-layer, .single-post .fluid-width-video-wrapper .me-plugin{
+	height:200px !important;
+}
+.mejs-overlay-button{
+	margin-top:0px !important;
+	top: 25% !important;
+}
+#social-share {
+	margin-top: 11px;
+}
+#social-share .social-share{
+	width: 90px;
+	margin-left: 4px;
+}
 
-
-
-
-
-
-
+.item .entry-meta, .item .stats{line-height:15px;}
 
 /*== Featured Content
  *=================================*/
@@ -309,19 +416,19 @@ height: 168px !important;
 .home-featured .stage .item:first-child{display:block}
 .fluid-width-video-wrapper .jwplayer, .fluid-width-video-wrapper > [id^="jwplayer"] {width:100% !important;height:270px !important}
 .home-featured .data-feature {
-    padding-top: 100%;
+   //padding-top: 100%;
 }
 .stage {height:530px !important;}
 .home-featured .stage .thumb img{width:300px;}
 
 .home-featured-full .stage,
-.home-featured-full .stage .carousel{width:300px;height:168px;}
+.home-featured-full .stage .carousel{width:300px;height:200px !important; padding-bottom:35px; margin-left: 5px;}
 .home-featured-full .stage,
 .home-featured-full .stage .carousel-list{height: 168px;}
 .home-featured-full .stage .item,
 .home-featured-full .stage .thumb {
 width: 300px;
-height: 168px;
+height: 500px;
 }
 .home-featured-full .stage .thumb img{width:300px;}
 .home-featured .stage .entry-meta .author, .home-featured .stage .entry-meta time{display:none}
@@ -329,10 +436,11 @@ height: 168px;
  *=================================*/
 .entry-header .entry-title{float:none;margin:0 0 10px !important;}
 .entry-header .entry-actions{float:none;margin:0;}
-
+.jw-infinite-scroll{width:300px;}
+.jw-infinite-scroll a.btn{padding: 14px 88px;}
 /*== Footbar
  *=================================*/
-#footbar.footbar-c4 .widget{width:300px;}
+#footbar.footbar-c4 .widget{width:290px;}
 
 /*== Colophon
  *=================================*/
@@ -347,6 +455,124 @@ font-size: 11px;
 margin: 0;
 display: block;
 }
-
+.dashboard-container,.leftbar,.rightbar,.user-container{
+	width:100%
+}
+.user-container .login-container{
+	width:95%;
+	float:none;
+	margin-bottom:20px !important;
+}
+.login-container .login input[type="text"], .login input[type="password"], .login input[type="email"],.login-container .login input[type="submit"]{
+	width:90%
+}
+.profilebtn,.newpostbtn {
+	float:left;
+	margin-left:10px;
+}
+button, .button, .btn, input[type="submit"], input[type="button"], input[type="reset"]{
+	/*padding:15px 50px;*/	
+}
+.info-box{
+	width:78%
+}
+header .headerbanner{
+	margin-left:0px;
+	width:100%
+}
+header .headerbanner img{
+	max-width:100%
+}
+.video-options input[type="radio"]{
+	margin-bottom:20px;
+}
 .fluid-width-video-wrapper embed{height:259px !important;}
+ .home-featured .fluid-width-video-wrapper iframe, .home-featured .fluid-width-video-wrapper object, .home-featured .fluid-width-video-wrapper embed, .home-featured .fluid-width-video-wrapper video{height:100% !important;}
+ .search-toggle{
+	display:none;
+}
+.tnav {
+   float: left;
+   position: relative;
+   top: -40px;
+    } 
+  
 /* End @media ================================================================== */}
+
+@media only screen and (min-width:980px) and (max-width:1024px) {
+ .boxed-wrap #page{
+	width:1000px;
+	padding:0;
+ } 
+  .wrap {
+    margin: 0 auto;
+    width: 980px;
+}
+  
+  #content {
+    
+    width: 885px;
+	}
+  
+  #sidebar {
+    border-left: 1px solid #e1e1e1;
+    border-top: 1px solid #e1e1e1;
+    margin-top: -1px;
+    width: 800px;
+    float:none !important;
+}
+  #sidebar .widget {
+    border-left: 1px solid #ffffff;
+    padding-left: 15px;
+    width: 800px;
+}
+  
+  .widget-posts .post-list-full li {
+    border-bottom: 1px solid #ddd;
+    border-top: 1px solid #fff;
+    margin: 0;
+    overflow: hidden;
+    padding: 10px 0;
+    float: left;
+    margin-right: 50px;
+}
+  
+  .widget-posts .post-list li {
+    border-top: 1px solid #fff;
+    margin: 0;
+    overflow: hidden;
+    padding: 10px 0;
+    position: relative;
+    float: left;
+    margin-right: 15px;
+}
+  
+.textwidget {
+    width: 520px;
+}
+  
+  
+#footbar.footbar-c4 .widget {
+    margin-left: 20px;
+    width: 500px;
+    float: left;
+}
+  
+  #footbar .widget {
+    float: none !important;
+}
+  
+  .cbp-qtrotator {
+    background-image: url("images/tweet-bg.png");
+    background-position: center bottom;
+    background-repeat: no-repeat;
+    border-radius: 5px 5px 12px 12px;
+    max-width: 800px;
+    overflow: hidden;
+    padding: 20px;
+    position: relative;
+    width: 232px;
+}
+  
+  }
+ /* End @media ================================================================== */
