--- a/wp-content/themes/beetube/style.css
+++ b/wp-content/themes/beetube/style.css
@@ -1,10 +1,10 @@
 /*
-Theme Name: Beetube (Shared on MafiaShare.net)
-Theme URI: http://www.MafiaShare.net
+Theme Name: Beetube (shared gfxfree.net )
+Theme URI: http://themeforest.net/item/beetube-video-wordpress-theme/7055188?ref=JoinWebs
 Description: A Professional Video/News/Magazine Wordpress Theme.
-Author: Team Joinwebs
-Author URI: http://www.MafiaShare.net
-Version: 2.0
+Author: Joinwebs
+Author URI: http://themeforest.net/user/JoinWebs/portfolio?ref=JoinWebs
+Version: 2.3.2
 License: GNU General Public License version 3.0
 License URI: http://www.gnu.org/licenses/gpl-3.0.html
 Tags: theme-options
