--- a/wp-content/themes/beetube/css/stylesheet-red.css
+++ b/wp-content/themes/beetube/css/stylesheet-red.css
@@ -57,6 +57,11 @@ a img {
 .view-all:hover{
 background:#e96969 !important;
 }
+.jw-infinite-scroll a.btn:hover{
+background-color:#e96969;
+color:#fff;
+border:none;
+}
 a {
 	color:#e96969;
 	text-decoration:none;
@@ -991,7 +996,7 @@ body {
 	overflow:hidden;
 }
 .boxed-wrap #page{
-	width: 990px;
+	width: 1170px;
 	margin: 0 auto;
 	background: #FFF;
 	-webkit-box-shadow: 0 0 10px rgba(120,120,120,0.5);
@@ -1354,9 +1359,6 @@ background:url(images/icons-red.png) no-repeat -2px -561px !important;
  #top-nav li{
 	 float:left;
 	 height:50px;
-	 background-image:url(images/top-nav-sep.png);
-	 background-repeat:no-repeat;
-	 background-position:right;
 	 font-family: 'Oxygen';	
 	 font-size:13px;
 	 text-shadow:none;
@@ -3559,7 +3561,7 @@ background:none;
 }
 .widget-single-post-stats .views , .widget-single-post-stats .comments, .widget-single-post-stats .likes  {
 	border-left:0;
-	background:url(images/stats-icon.png) no-repeat;		
+	background:url(images/stats-red.png) no-repeat;		
 	padding-top:20px;
 	height:40px;
 }
@@ -3890,6 +3892,9 @@ border-left: 1px solid #FFFFFF;
 #social-nav .drib a {
     background-position: 0 -259px;
 }
+#social-nav .youtu a {
+    background:url(images/youtube-red.png) no-repeat 0 0;
+}
 
 #social-nav .tumblr a:hover {
 	background-position:0 -296px;
@@ -3911,6 +3916,9 @@ border-left: 1px solid #FFFFFF;
 }
 #social-nav .drib a:hover {
     background-position: 0 -555px;
+}
+#social-nav .youtu a:hover {
+    background-position: 0 -35px;
 }
 
 /*= Comments & Respond
@@ -4469,8 +4477,8 @@ position: relative;
 	box-shadow:inset 1px 1px 1px 0px #efefef;
 	color:#777777;
 }
-.login-container .login input[type=submit]{
-	background:#e96969;
+.login-container .login input[type=submit]{	
+	background:rgba(233,105,105, .8);
 	width:330px;
 	padding:14px 0px !important;
 	border:none;
@@ -4478,7 +4486,7 @@ position: relative;
 	color:#fff;
 	}
 .login-container .login input[type=submit]:hover{
-	background:#729b43;
+	background:#e96969;
 	}
 .login-container .login p.forget{
 	margin-bottom:0px;
@@ -4577,3 +4585,78 @@ background:#e96969;
 .search-no-results .no-results{
 	border-top: 1px solid #E1E1E1;
 	}
+/*= Boxed Layout
+ *=============================================================================*/
+.boxed-wrap #page{	
+	
+}
+.boxed-wrap #page .tnav{
+padding-left:10px;
+}
+	.boxed-wrap #page .header-secend .wrap #branding{
+		padding-left:10px;
+	}
+	.boxed-wrap #page .header-secend .wrap #social-nav{
+		margin-right:10px;
+	}
+	.boxed-wrap #page  .home-featured{
+		margin-left:5px;
+		
+	}
+	.boxed-wrap #page  .home-featured .mCSB_scrollTools .mCSB_draggerContainer{
+		left:-30px !important;
+	}
+	.boxed-wrap #page .home-featured .stage .entry-title{
+		margin-left:10px;
+	}
+	.boxed-wrap #page .home-featured .stage .entry-meta {
+		margin-left:10px;
+	}
+	.boxed-wrap #page .home-featured .stage .entry-summary{
+		margin-left:10px;
+	}
+	.boxed-wrap #page #main .wrap #content .loop-actions .sort{
+		margin-left:10px;
+	}
+	.boxed-wrap #page #main .wrap #content{
+		width:844px;
+		margin-left:10px;
+	}
+	.boxed-wrap #page #main .data-single-full{
+		margin-left:10px;
+	}
+	.boxed-wrap .home-featured .data-feature .entry-meta, .data-single-full{
+		margin-left:10px !important;
+	}
+	.boxed-wrap #page #sidebar{
+		width:280px;
+		 padding-right: 10px;
+	}
+	.boxed-wrap #page #main .wrap #content .grid-mini .item{
+		margin: 0 0 20px 35px;
+		width: 180px;
+	}
+	.boxed-wrap #page #main .wrap #content .loop-title{
+		margin: 0 0 20px 10px;		
+	}
+	.boxed-wrap #page #main .wrap #content .list-small .item{
+		margin-left:10px;		
+	}
+	.boxed-wrap #page #main .wrap #content .list-medium .item{
+		margin-left:10px;		
+	}
+	.boxed-wrap #page #main .wrap #content .list-large .item{
+		margin-left:10px;		
+	}
+	.boxed-wrap #page #main .wrap #content .grid-small .item{		 
+		margin: 0 0 20px 35px;
+		width: 250px;
+	}
+	.boxed-wrap #page #main .wrap #content .grid-medium .item{		 
+		margin: 0 10px 20px 25px;
+    width: 390px;
+	}
+	.boxed-wrap #footer  .wrap #footbar-inner .widget:first-child{
+		margin-left: 10px;
+	}
+	
